force-app/main/default/objects/LTC_API_Fields_Map__mdt/LTC_API_Fields_Map__mdt.object-meta.xml
<CustomObject>
    <label>LTC API Field Map</label>
    <pluralLabel>LTC API Fields Map</pluralLabel>
</CustomObject>