force-app/main/default/objects/LTC_API_Fields_Map__mdt/fields/Integration_Field_Display__c.field-meta.xml
<CustomField>
    <fullName>Integration_Field_Display__c</fullName>
    <label>Integration Field Display</label>
    <referenceTo>Integration_Field_Display__mdt</referenceTo>
    <relationshipLabel>LTC API Fields Map</relationshipLabel>
    <relationshipName>LTC_API_Fields_Map</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>