force-app/main/default/objects/LTC_API_Fields_Map__mdt/fields/Interface_Operation_Setting__c.field-meta.xml
<CustomField>
    <fullName>Interface_Operation_Setting__c</fullName>
    <label>Interface Operation Setting</label>
    <referenceTo>Interface_Operation_Setting__mdt</referenceTo>
    <relationshipLabel>LTC API Fields Map</relationshipLabel>
    <relationshipName>LTC_API_Fields_Map</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>