force-app/main/default/objects/LTC_API_Fields_Map__mdt/fields/LTC_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LTC_Field_Name__c</fullName>
    <label>LTC Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>