force-app/main/default/objects/LTC_API_Fields_Map__mdt/fields/LTC_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>LTC_Field_Type__c</fullName>
    <label>LTC Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>epochDate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>