force-app/main/default/objects/LTC_API_Fields_Map__mdt/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show</label>
    <type>Checkbox</type>
</CustomField>