force-app/main/default/objects/LTC_API_Fields_Map__mdt/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>MasterLabel</columns>
    <columns>Display_Order__c</columns>
    <columns>Integration_Field_Display__c</columns>
    <columns>Interface_Operation_Setting__c</columns>
    <columns>DeveloperName</columns>
    <columns>LTC_Field_Label__c</columns>
    <columns>LTC_Field_Name__c</columns>
    <columns>LTC_Field_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>